--- a/action.yml
+++ b/action.yml
@@ -19,6 +19,9 @@ inputs:
   prefix:
     description: 'Package version prefix'
     required: false
+  die-on-missing:
+    description: 'Throw an exception if a package matching the prefix was not found. Otherwise, start a new version'
+    required: false
   increment-amount:
     description: 'Amount to increment the version number by'
     required: false
