--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
   },
   "homepage": "https://github.com/actions/javascript-action#readme",
   "dependencies": {
-    "@actions/core": "^1.2.5",
-    "aws-sdk": "^2.1053.0"
+    "@actions/core": "^1.10.0",
+    "aws-sdk": "^2.1366.0"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.31.1",
+    "aws-sdk-mock": "^5.8.0",
     "eslint": "^8.0.0",
     "jest": "^27.2.5"
   }
